# libsilver

./: Cargo.toml  IMPLEMENT_STEP.md  README.md  libsilver.darwin-arm64.node  package-lock.json
benches/: crypto_bench.rs
bindings/: README.md
bindings/kotlin/: README.md  build.gradle.kts
bindings/kotlin/src/commonMain/kotlin/com/libsilver/: LibSilver.kt
bindings/node/: BUILD.md  Cargo.toml  LICENSE  README.md  build.sh  index.d.ts  index.js  libsilver-nodejs-0.1.0.tgz  libsilver.darwin-arm64.node  libsilver.win32-arm64-msvc.node  libsilver.win32-x64-msvc.node  package-lock.json  package.json
bindings/node/.cargo/: config.toml
bindings/node/benchmark/: analysis.js  benchmark.js  memory-benchmark.js  package-lock.json  package.json  preload-benchmark.js  run-all.js
bindings/node/examples/: nodejs-example.js
bindings/node/src/: lib.rs  preloaded-crypto.js
bindings/node/test/: test.js
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/LibSilver/: LibSilver.swift
src/: error.rs  lib.rs
src/core/: asymmetric.rs  hash.rs  kdf.rs  mod.rs  random.rs  symmetric.rs
tests/: integration_test.rs
